--- a/app/globals.css
+++ b/app/globals.css
@@ -155,3 +155,15 @@ code {
   -ms-overflow-style: none;
   scrollbar-width: none;
 }
+
+.text-red-600 {
+  color: #dc2626;
+}
+
+.border-red-600 {
+  border-color: #dc2626;
+}
+
+.drop-shadow-custom {
+  box-shadow: 0px 3px 7px rgba(0, 0, 0, 0.16);
+}
